[gd_scene load_steps=7 format=3 uid="uid://bxa3gxk4x4w3b"]

[ext_resource type="Script" path="res://Objects/Weapon2D/weapon_2d.gd" id="1_3aoe8"]
[ext_resource type="Texture2D" uid="uid://0mlbsus0eyvf" path="res://Assets/Images/sprite-sheet.svg" id="1_dnswi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s1mxg"]
resource_local_to_scene = true
radius = 128.0

[sub_resource type="Animation" id="Animation_pxgmf"]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_xpwp4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a46n4"]
_data = {
"RESET": SubResource("Animation_xpwp4"),
"shoot": SubResource("Animation_pxgmf")
}

[node name="Weapon2D" type="Node2D"]
script = ExtResource("1_3aoe8")

[node name="BulletSpawnPosition2D" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(67, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_dnswi")
offset = Vector2(40, 0)
region_enabled = true
region_rect = Rect2(192, 176, 54, 18)

[node name="RangeArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea2D"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_s1mxg")

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_a46n4")
}
